--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* --------------------------------------- General tags and HTML standard tags */
 :root {
-  padding: 1rem;
+  padding: 1vh;
   text-align: center;
   font-family: "Press Start 2P" !important;
 }
@@ -9,16 +9,16 @@ html {
   padding: 0;
 }
 body {
-    background-image: url("assets/backgr.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-color: rgb(235, 145, 213);
-    margin: 0;
-    padding: 0;
-    clear: both;
-    height: 100vh;
-    overflow: hidden;
+  background-image: url("assets/backgr.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-color: rgb(235, 145, 213);
+  margin: 0;
+  padding: 0;
+  clear: both;
+  height: 100vh;
+  overflow: hidden;
 }
 button {
   background-color: #edb1e2;
@@ -100,9 +100,9 @@ button {
 
 /* --------------------------------------- Matrix grid */
 .grid {
-    float: left;
-    margin-left: 15vw;
-    margin-bottom: 5px;
+  float: left;
+  margin-left: 15vw;
+  margin-bottom: 5px;
 }
 .container {
   display: grid;
@@ -133,42 +133,42 @@ button {
 
 
 @media screen and (max-width: 1000px) {
-    body {
-        overflow: scroll;
-    }
-    :root {
-        padding: 0;
-    }
-    .main {
-        margin: 0;
-    }
-    .grid {
-        margin: 0 2.5vw 0;
-        padding: 15vh 0 0;
-        float: none;
-    }
-    .container {
-        display: grid;
-        grid-template-rows: repeat(64, 1fr);
-        grid-template-columns: repeat(64, 1fr);
-        width: 90vw;
-        height: 90vw;
-    }
-    .grid-item {
-        border: 0.1vw solid #000000;
-    }
-    /* Selected cell will get a golden highlight */
-    .chosen-item {
-        border: 0.1vw solid rgb(138, 40, 150);
-        box-shadow: 0.1vw 0.1vw 0.8vw 0.8vw rgb(255, 238, 0);
-        position: relative;
-        z-index: 2;
-    }
-    .member-chosen-item {
-        border: 0.1vw solid rgb(138, 40, 150);
-        position: relative;
-        z-index: 1;
-    }
+  body {
+    overflow: scroll;
+  }
+  :root {
+    padding: 0;
+}
+  .main {
+    margin: 0;
+  }
+  .grid {
+    margin: 0 2.5vw 0;
+    padding: 15vh 0 0;
+    float: none;
+  }
+  .container {
+    display: grid;
+    grid-template-rows: repeat(64, 1fr);
+    grid-template-columns: repeat(64, 1fr);
+    width: 90vw;
+    height: 90vw;
+  }
+  .grid-item {
+    border: 0.1vw solid #000000;
+  }
+  /* Selected cell will get a golden highlight */
+  .chosen-item {
+    border: 0.1vw solid rgb(138, 40, 150);
+    box-shadow: 0.1vw 0.1vw 0.8vw 0.8vw rgb(255, 238, 0);
+    position: relative;
+    z-index: 2;
+  }
+  .member-chosen-item {
+    border: 0.1vw solid rgb(138, 40, 150);
+    position: relative;
+    z-index: 1;
+  }
 }
 
 /* --------------------------------------- Colour palette */
@@ -178,82 +178,82 @@ button {
   box-shadow: inset -2px -2px #dfdfdf, inset 2px 2px #808080;
 }
 @media screen and (min-width: 1001px) {
-    .colorPalette {
-        float: left;
-        margin-top: 10vw;
-        margin-left: 5vw;
-        width: 8vw;
-        height: 30vw;
-    }
-    .colorPalette .title-bar {
-        text-align: left;
-    }
-    .colorPalette-container {
-        display: grid;
-        grid-template-rows: repeat(8, 1fr);
-        grid-template-columns: repeat(2, 1fr);
-        width: 5vw;
-        height: 20vw;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 2vw;
-        margin-bottom: 1vw;
-    }
-    .colorPalette-container .grid-item {
-        border: 0.1vw solid #000000;
-    }
-    .colorPalette button {
-        width: 80%;
-        margin-bottom: 1vw;
-    }
-    #checkbox-icon {
-        height: 2vh;
-    }
-    #cross-icon {
-        height: 2vh;
-    }
-    .group-button {
-        display: none;
-    }
+  .colorPalette {
+    float: left;
+    margin-top: 10vw;
+    margin-left: 5vw;
+    width: 8vw;
+    height: 30vw;
+  }
+  .colorPalette .title-bar {
+    text-align: left;
+  }
+  .colorPalette-container {
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    width: 5vw;
+    height: 20vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2vw;
+    margin-bottom: 1vw;
+  }
+  .colorPalette-container .grid-item {
+    border: 0.1vw solid #000000;
+  }
+  .colorPalette button {
+    width: 80%;
+    margin-bottom: 1vw;
+  }
+  #checkbox-icon {
+    height: 2vh;
+  }
+  #cross-icon {
+    height: 2vh;
+  }
+  .group-button {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1000px) {
-    .colorPalette {
-        z-index: 2;
-        width: 85vw;
-        margin: 5vw 7.5vw 0;
-        bottom: 0;
-    }
-    .colorPalette .title-bar {
-        text-align: left;
-    }
-    .colorPalette-container {
-        float: left;
-        display: grid;
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-columns: repeat(8, 1fr);
-        width: 60vw;
-        height: 15vw;
-    }
-    .colorPalette button {
-        width: 15vw;
-        height: 6vw;
-        padding: 0;
-        margin-top: 0.5vw;
-        margin-left: 2vw;
-    }
-    #checkbox-icon {
-        height: 5vw;
-    }
-    #cross-icon {
-        height: 5vw;
-    }
-    .palette-clear {
-        clear: both;
-    }
-    .group-button {
-        display: auto;
-    }
+  .colorPalette {
+    z-index: 3;
+    width: 85vw;
+    margin: 5vw 7.5vw 0;
+    bottom: 0;
+  }
+  .colorPalette .title-bar {
+    text-align: left;
+  }
+  .colorPalette-container {
+    float: left;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(8, 1fr);
+    width: 60vw;
+    height: 15vw;
+  }
+  .colorPalette button {
+    width: 15vw;
+    height: 6vw;
+    padding: 0;
+    margin-top: 0.5vw;
+    margin-left: 2vw;
+  }
+  #checkbox-icon {
+    height: 5vw;
+  }
+  #cross-icon {
+    height: 5vw;
+  }
+  .palette-clear {
+    clear: both;
+  }
+  .group-button {
+    display: auto;
+  }
 }
 
 /* ---------------------------------------  Sidebar or top bar */
@@ -263,70 +263,70 @@ display: none;
 }
 
 @media screen and (min-width: 1001px) {
-    .side-bar {
-        height: 100%;
-        width: 20vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-image: linear-gradient(
-            to top,
-            rgba(252, 58, 220, 0.456),
-            rgba(255, 251, 254, 0.608)
-        );
-        overflow-x: hidden;
-        padding-top: 1vh;
-        z-index: 2;
-    }
-    .login-btn {
-        position: absolute;
-        left: 2vh;
-        padding: 2vh 0;
-    }
-    .tutorial-btn {
-        position: absolute;
-        bottom: 12vh;
-        left: 2vh;
-    }
-    .logo img {
-        position: absolute;
-        left: 6vh;
-        bottom: 2vh;
-        width: 8vh;
-        height: 8vh;
-    }
-    #google-logo {
-        width: 2vh;
-        height: 2vh;
-        margin-right: 1vh;
-    }
+  .side-bar {
+    height: 100%;
+    width: 20vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(
+        to top,
+        rgba(252, 58, 220, 0.456),
+        rgba(255, 251, 254, 0.608)
+    );
+    overflow-x: hidden;
+    padding-top: 1vh;
+    z-index: 2;
+  }
+  .login-btn {
+    position: absolute;
+    left: 2vh;
+    padding: 2vh 0;
+  }
+  .tutorial-btn {
+    position: absolute;
+    bottom: 12vh;
+    left: 2vh;
+  }
+  .logo img {
+    position: absolute;
+    left: 6vh;
+    bottom: 2vh;
+    width: 8vh;
+    height: 8vh;
+  }
+  #google-logo {
+    width: 2vh;
+    height: 2vh;
+    margin-right: 1vh;
+  }
 }
 
 @media screen and (max-width: 1000px) {
-    .side-bar {
-        position: absolute;
-        width: 100%;
-        height: 12vh;
-        left: 0;
-        top: 0;
-        background-color: rgba(102, 102, 102, 0.476);
-    }
-    .login-btn {
-        float: right;
-        padding: 4vh 0;
-        margin-right: 2vw;
-    }
-    .tutorial-btn {
-        float: left;
-        padding: 4vh 0;
-        margin-left: 2vw;
-    }
-    .logo img {
-        position: absolute;
-        margin: 2vw auto 0;
-        width: 8vh;
-        height: 8vh;
-    }
+  .side-bar {
+    position: absolute;
+    width: 100%;
+    height: 12vh;
+    left: 0;
+    top: 0;
+    background-color: rgba(102, 102, 102, 0.476);
+  }
+  .login-btn {
+    float: right;
+    padding: 4vh 0;
+    margin-right: 2vw;
+  }
+  .tutorial-btn {
+    float: left;
+    padding: 4vh 0;
+    margin-left: 2vw;
+  }
+  .logo img {
+    position: absolute;
+    margin: 2vw auto 0;
+    width: 8vh;
+    height: 8vh;
+  }
 }
 
 
@@ -347,10 +347,10 @@ display: none;
   );
   z-index: 2;
 }
-
 .colour-container {
   height: 2vh;
   width: 2vh;
+  border: black 1px solid;
   border-radius: 50%;
   float: left;
   margin-left: 1vw;
@@ -368,6 +368,39 @@ display: none;
 .group-title {
   font-family: "Press Start 2P" !important;
   font-size: medium;
+}
+
+@media screen and (max-width: 1000px){
+  .right-sidebar {
+    height: 82%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    overflow: auto;
+    padding-top: 1vh;
+    background-image: linear-gradient(
+      to top,
+      rgba(252, 58, 220, 0.916),
+      rgba(255, 251, 254, 0.9)
+    );
+  }
+  .group-member {
+    display: table;
+    margin-bottom: 2vw;
+  }
+  .member-name {
+    float: right;
+    margin-left: 1vw;
+    font-family: "Press Start 2P" !important;
+    font-size: x-small;
+  }
+  .colour-container {
+    height: 2vh;
+    width: 2vh;
+    border-radius: 50%;
+    float: left;
+    margin-left: 1vw;
+  }
 }
 
 /* --------------------------------------- Dropdown menu */
@@ -392,26 +425,26 @@ display: none;
   text-align: left;
 }
 @media screen and (max-width: 1000px) {
-    .dropdown-menu {
-        position: fixed;
-        top: 35%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 32px !important;
-        padding: 32px 64px !important;
-    }
-    .dropdown-menu button {
-        font-size: 18px;
-        padding: 8px 12px;
-    }
+  .dropdown-menu {
+      position: fixed;
+      top: 35%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 32px !important;
+      padding: 32px 64px !important;
+  }
+  .dropdown-menu button {
+      font-size: 18px;
+      padding: 8px 12px;
+  }
 }
 @media screen and (min-width: 1001px) {
-    .dropdown-menu {
-        position: absolute;
-        z-index: 1;
-        min-width: 100px;
-        padding: 0px 0px;
-    }
+  .dropdown-menu {
+      position: absolute;
+      z-index: 1;
+      min-width: 100px;
+      padding: 0px 0px;
+  }
 }
 
 /* --------------------------------------- Other ID:s and classes */
@@ -420,16 +453,28 @@ display: none;
   width: 20vw;
   padding: 30vh 0;
 }
-@media screen and (max-width: 1000px) {
-    #loading {
-        width: 90vw;
-        padding: 30vh 0;
-    }
-}
 
 .artist-tag {
-    font-family: "Press Start 2P" !important;
+  width: 10vw;
+  font-family: "Press Start 2P";
+  position: absolute;
+  margin-left: 65vw;
 }
+
+@media screen and (max-width: 1000px) {
+  #loading {
+    width: 90vw;
+    padding: 30vh 0;
+  }
+
+  .artist-tag {
+    width: 100vw;
+    margin-top: 12.5vh;
+    margin-left: 0;
+    font-size: 0.8em;
+  }
+}
+
 .history-page {
   display: flex;
   align-items: center;
